// Storage protos for auth data.
syntax = "proto2";
package auth;

// A system user.
message User {
    // The user's name.
    required string name = 1;
    // The user's role.
    required UserRole role = 2;
    // A bcrypt hash of the user's password.
    required string pwhash = 3;
}

// A system user's role.
enum UserRole {
    // Full control over the cluster and all resources.
    //
    // There is only ever one root user — called `root` — and its permissions are irrevocable.
    // It is recommended that the `root` user only be used to create an initial set of admin
    // users which should be used from that point onward.
    Root = 0;
    // Full control over the cluster and all resources.
    Admin = 1;
    // A user with view-only permissions on cluster resources.
    Viewer = 2;
}
